# zk-apps

shielder/cli/: Cargo.toml  deposit.pk.bytes  deposit_and_merge.pk.bytes  merge.pk.bytes  shielder-metadata.json  withdraw.pk.bytes
shielder/cli/src/: ink_contract.rs
shielder/contract/src/: contract.rs
shielder/deploy/: deploy.sh
shielder/deploy/docker/keys/: deposit.groth16.vk.bytes  deposit_and_merge.groth16.vk.bytes  merge.groth16.vk.bytes  withdraw.groth16.vk.bytes
vote-shielder/: README.md
vote-shielder/cli/: Cargo.toml  a  deposit.pk.bytes  deposit_and_merge.pk.bytes  shielder-metadata.json  vote.pk.bytes  withdraw.pk.bytes
vote-shielder/cli/src/: config.rs  contract.rs  ink_contract.rs  lib.rs  main.rs  vote.rs
vote-shielder/contract/: Cargo.toml
vote-shielder/contract/src/: contract.rs  lib.rs
vote-shielder/deploy/: deploy.sh  voting.sh
vote-shielder/deploy/docker/keys/: deposit.groth16.vk.bytes  deposit_and_merge.groth16.vk.bytes  merge.groth16.vk.bytes  vote.groth16.vk.bytes  withdraw.groth16.vk.bytes
vote-shielder/deploy/docker/node_data/: chainspec.snarkeling.json
vote-shielder/deploy/docker/node_data/5D34dL5prEUaGNQtPPZ3yN5Y6BnkfXunKXXz6fo7ZJbLwRRH/backup-stash/1/: 0.abfts
vote-shielder/deploy/docker/node_data/5D34dL5prEUaGNQtPPZ3yN5Y6BnkfXunKXXz6fo7ZJbLwRRH/backup-stash/13/: 0.abfts
vote-shielder/deploy/docker/node_data/5D34dL5prEUaGNQtPPZ3yN5Y6BnkfXunKXXz6fo7ZJbLwRRH/backup-stash/20/: 0.abfts
