[package]
name = "shielder"
version = "0.1.0"
authors = ["Cardinal Cryptography"]
edition = "2021"
homepage = "https://alephzero.org"
repository = "https://github.com/aleph-zero-foundation/aleph-node"
license = "Apache 2.0"
publish = false

[lib]
name = "shielder"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
ark-serialize = { version = "^0.4.2", default-features = false }
ark-bls12-381 = { version = "^0.4.0", default-features = false, features = [
    "curve",
] }
ark-ec = { version = "^0.4.2", default-features = false }
ark-std = { version = "^0.4.0", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = [
    "derive",
] }
scale-info = { version = "2.3", default-features = false, features = [
    "derive",
], optional = true }

ink = { version = "~4.0.1", default-features = false }
openbrush = { git = "https://github.com/727-Ventures/openbrush-contracts/", tag = "3.0.0", default-features = false, features = [
    "psp22",
    "ownable",
] }

liminal-ark-relations = { path = "/usr/local/aleph-node/relations", default-features = false }
baby-liminal-extension = { path = "/usr/local/aleph-node/baby-liminal-extension", default-features = false, features = [
    "ink",
    "ink-as-dependency",
] }

saver = { path = "/usr/local/crypto/saver", default-features = false }

[features]
default = ["std"]
std = [
    "ark-serialize/std",
    "scale/std",
    "scale-info/std",

    "ink/std",
    "openbrush/std",

    "liminal-ark-relations/std",
    "baby-liminal-extension/ink-std",
]
ink-as-dependency = []
